```mermaid
erDiagram
    USERS ||--o{ CARTS : "has"
    USERS ||--o{ ORDERS : "places"
    USERS ||--o{ PAYMENTS : "makes"
    
    CARTS ||--|{ CART_ITEMS : "contains"
    PRODUCTS ||--o{ CART_ITEMS : "in"
    
    ORDERS ||--|{ ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ ORDER_ITEMS : "in"
    
    ORDERS ||--o{ PAYMENTS : "for"
    
    USERS {
        int id PK
        string name
        string email UK
        string password
        string role
        timestamp created_at
    }
    
    PRODUCTS {
        int id PK
        string name
        text description
        decimal price
        int stock
        string category
        string image_url
        timestamp created_at
        timestamp updated_at
    }
    
    CARTS {
        int id PK
        int user_id FK
        timestamp created_at
    }
    
    CART_ITEMS {
        int id PK
        int cart_id FK
        int product_id FK
        int quantity
        decimal unit_price
    }
    
    ORDERS {
        int id PK
        int user_id FK
        decimal total_amount
        string status
        text shipping_address
        timestamp created_at
        timestamp updated_at
    }
    
    ORDER_ITEMS {
        int id PK
        int order_id FK
        int product_id FK
        string product_name
        int quantity
        decimal unit_price
    }
    
    PAYMENTS {
        int id PK
        int order_id FK
        int user_id FK
        decimal amount
        string status
        string payment_method
        timestamp created_at
    }
```
